--- a/app-stack/app/meu-website/index.html
+++ b/app-stack/app/meu-website/index.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bem vio - Ambiente Cloud Azure</h1>
+    <h1>Bem vindo - Ambiente Cloud Azure</h1>
 </body>
 </html>
