--- a/app-stack/app/meu-website/index.html
+++ b/app-stack/app/meu-website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bem vindo</title>
+    <title>Bem vindo ao Desafio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
