--- a/app-stack/app/meu-website/index.html
+++ b/app-stack/app/meu-website/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Olá</title>
+    <title>Ola</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Olá, sejam bem vindos</h1>
+    <h1>Ola, sejam bem vindos</h1>
 </body>
 </html>
